fix(footer): align footer to the bottom

--- a/assets/scss/abstracts/_abstracts.colors.scss
+++ b/assets/scss/abstracts/_abstracts.colors.scss
@@ -19,32 +19,32 @@ $color-link: #542bff;
   --color-link-rgb: 84, 43, 255;
   --color-white: #fff;
 
-  --color-primary: var(--color-purple);
-  --color-text: var(--color-black);
-  --color-text-light: var(--color-grey-700);
+  // --color-primary: var(--color-purple);
+  // --color-text: var(--color-black);
+  // --color-text-light: var(--color-grey-700);
 
-  --color-black: #10112a;
-  --color-grey-700: #57586e;
-  --color-grey-500: #afb0c2;
-  --color-grey-400: #dfe3ec;
-  --color-grey-300: #f0f1f3;
-  --color-grey-100: #fafafb;
+  // --color-black: #10112a;
+  // --color-grey-700: #57586e;
+  // --color-grey-500: #afb0c2;
+  // --color-grey-400: #dfe3ec;
+  // --color-grey-300: #f0f1f3;
+  // --color-grey-100: #fafafb;
 
   // --color-jellypepper: #f12369;
   // --color-jellypepper-300: #ff596e;
   // --color-jellypepper-700: #d9205e;
   // --color-jellypepper-900: #c11c54;
 
-  --color-blue: #495DE6;
-  --color-red: #EC5B55;
-  --color-light-blue: #A9D1D5;
-  --color-orange: #F08C34;
-  --color-butter: #FDD283;
-  --color-green: #49C5B6;
-  --color-purple: #7A55E7;
+  // --color-blue: #495DE6;
+  // --color-red: #EC5B55;
+  // --color-light-blue: #A9D1D5;
+  // --color-orange: #F08C34;
+  // --color-butter: #FDD283;
+  // --color-green: #49C5B6;
+  // --color-purple: #7A55E7;
 
-  --elevation-flat: 0px 0px 10px rgba(0,0,0,0.07);
-  --elevation-raised: 0px 20px 40px rgba(0,0,0,0.06);
+  // --elevation-flat: 0px 0px 10px rgba(0,0,0,0.07);
+  // --elevation-raised: 0px 20px 40px rgba(0,0,0,0.06);
 
   // --radius-0: 0;
   //   --radius-1: 0.125em;
